--- a/LlamaCoin/view/frontend/web/template/payment/llamacoin.html
+++ b/LlamaCoin/view/frontend/web/template/payment/llamacoin.html
@@ -1,9 +1,3 @@
-<!--
-/**
- * Copyright © Magento, Inc. All rights reserved.
- * See COPYING.txt for license details.
- */
--->
 <div class="payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
     <div class="payment-method-title field choice">
         <input type="radio"
@@ -23,28 +17,12 @@
             <!-- ko template: getTemplate() --><!-- /ko -->
             <!--/ko-->
         </div>
-        <iframe width="0"
-                height="0"
-                data-bind="src: getSource(), attr: {id: getCode() + '-transparent-iframe', 'data-container': getCode() + '-transparent-iframe'}"
-                allowtransparency="true"
-                frameborder="0"
-                name="iframeTransparent"
-                class="payment-method-iframe">
 
-        </iframe>
-        <form class="form" id="co-transparent-form" action="#" method="post" data-bind="mageInit: {
-            'transparent':{
-                'context': context(),
-                'controller': getControllerName(),
-                'gateway': getCode(),
-                'orderSaveUrl':getPlaceOrderUrl(),
-                'cgiUrl': getCgiUrl(),
-                'dateDelim': getDateDelim(),
-                'cardFieldsMap': getCardFieldsMap(),
-                'nativeAction': getSaveOrderUrl()
-            }, 'validation':[]}">
+        <!-- Render the native credit card form. -->
+        <form class="form" data-bind="attr: {'id': getCode() + '-form'}">
             <!-- ko template: 'Magento_Payment/payment/cc-form' --><!-- /ko -->
         </form>
+
         <div class="checkout-agreements-block">
             <!-- ko foreach: $parent.getRegion('before-place-order') -->
             <!-- ko template: getTemplate() --><!-- /ko -->
